Added diabetes prediction

--- a/python/hearth_disease_py/hearth_disease.ipynb
+++ b/python/hearth_disease_py/hearth_disease.ipynb
@@ -2,15 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_8316\\102321407.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set shape: (800, 12) (800,)\n",
-      "Testing set shape: (200, 12) (200,)\n"
+      "Feature names: ['age', 'gender', 'chestpain', 'restingBP', 'serumcholestrol', 'fastingbloodsugar', 'restingrelectro', 'maxheartrate', 'exerciseangia', 'oldpeak', 'slope', 'noofmajorvessels']\n"
      ]
     }
    ],
@@ -22,19 +35,15 @@
     "df= pd.read_csv(\"hearth_diseases_dataset.csv\")                # first things first, data-preprocessing\n",
     "df.isna().sum()                     # checking for missing values\n",
     "\n",
-    "x = df.drop(['target','patientid'], axis=1)  # Features\n",
     "y = df['target']               # Target variable\n",
+    "x = df.drop(['target','patientid'], axis=1)  # Features\n",
     "\n",
-    "# 80-20 split for train-test\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "print(\"Training set shape:\", x_train.shape, y_train.shape)     \n",
-    "print(\"Testing set shape:\", x_test.shape, y_test.shape)"
+    "print(\"Feature names:\", x.columns.tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +911,7 @@
     "}\n",
     "lr_model = LogisticRegression()\n",
     "\n",
-    "lr_cv = GridSearchCV(estimator=lr_model, param_grid=parameters, cv=10).fit(x_train, y_train)\n",
+    "lr_cv = GridSearchCV(estimator=lr_model, param_grid=parameters, cv=10).fit(x, y)\n",
     "\n",
     "print('Tuned hyper parameters : ', lr_cv.best_params_)\n",
     "\n"
@@ -910,16 +919,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['C:/Users/user/legacy/MLproj/hearth_disease/logRes_model.pkl']"
+       "['logRes_model.pkl']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +936,7 @@
    "source": [
     "import joblib       # for loading the model to an API\n",
     "\n",
-    "joblib.dump(lr_cv, 'path/to/your_model.pkl')        # edit your directory "
+    "joblib.dump(lr_cv, 'logRes_model.pkl')        # edit your directory "
    ]
   }
  ],
